[package]
name = "pi"
version = "0.1.0"
authors = ["Radovan Bast <bast@users.noreply.github.com>"]
description = "Hands-on demo of the Rust programming language."
license = "MIT"
edition = "2018"

[package.metadata.maturin]
requires-python = ">=3.6"
classifier = ["Programming Language :: Python"]

[lib]
name = "pi"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
rand = "0.8.3"
pyo3 = { version = "0.13", features = ["extension-module"] }
